--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,10 @@
 }
 body{
   font-family: 'Roboto', sans-serif;
-  /* background: var(--cinza-medio); */
+  background: url(../img/BGPNG.png);
+  background-repeat: no-repeat;
+    width: 100%;
+    height: 100%;
 }
 .title{
   text-align: center;
