--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -14,7 +14,7 @@
 }
 body{
   font-family: 'Roboto', sans-serif;
-  background: url(../img/BGPNG1.png);
+  background: url(../img/BGFinal.png);
   background-repeat: no-repeat;
     width: 100%;
     height: 100%;
