--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,10 +16,10 @@ body{
   font-family: 'Roboto', sans-serif;
   background: url(../img/BGFinal.png);
   background-repeat: no-repeat;
-    width: 100%;
-    height: 100%;
-    background-size: cover;
-    background-attachment: fixed;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 .title{
   text-align: center;
@@ -110,8 +110,10 @@ h2{
   letter-spacing: 0.5em; word-spacing: 0.5em
   
 }
+
 .content-yi > img{
   align-items: center;
+  width: 100%;
 }
 .content-yi h3{
   text-align: center;
@@ -148,13 +150,12 @@ a:hover{
   }
 }
 
-
 footer{
   text-align: center;
   height: 150px;
   background:var(--cinza-medio);
   width: 101%;
-  margin: -0% -1%;
+  margin: 0%;
   margin-bottom: -1%;
 }
 
@@ -175,10 +176,12 @@ footer{
   height: 75vh;
   transform: scale(0);
   transition: all linear .3s;
+  display: none;
 }
 
 .modal_active #modal_img{
   transform: scale(1);
+  display: block;  
 }
 
 .modal{
